--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <li><a href="/StudentSamples/Year1/A07/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A07/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A07/04.html">Emily J.</a>
-    <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/05.html">Logan I.</a>
     <li><a href="/StudentSamples/Year1/A07/HM01.html"> </a>
     </ol>
     <h3>Assignment #8: Simple Game</h3>
@@ -92,7 +92,7 @@
     <li><a href="/StudentSamples/Year1/A09/03.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A09/04.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A09/05.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/HM01.html">Sam S.</a>
     </ol>
     <h3>Assignment #10: For Loops</h3>
     <ol>
@@ -110,7 +110,7 @@
     <li><a href="/StudentSamples/Year1/A11/03.html">Jensen S.</a>
     <li><a href="/StudentSamples/Year1/A11/04.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A11/05.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A11/HM01.html">John J.</a>
+    <li><a href="/StudentSamples/Year1/A11/HM01.html">Sam S.</a>
     </ol>
     <h3>Assignment #12: Snow</h3>
     <ol>
@@ -137,7 +137,7 @@
     <li><a href="/StudentSamples/Year1/A14/03.html">Troy F.</a>
     <li><a href="/StudentSamples/Year1/A14/04.html">Blaise W.</a>
     <li><a href="/StudentSamples/Year1/A14/05.html">Noah L.</a>
-    <li><a href="/StudentSamples/Year1/A14/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/HM01.html">Sam S.</a>
     </ol>
     <h3>Assignment #15: The Cell</h3>
     <ol>
@@ -145,7 +145,7 @@
     <li><a href="/StudentSamples/Year1/A15/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A15/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A15/04.html">Cyrus F.</a>
-    <li><a href="/StudentSamples/Year1/A15/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/05.html">Logan I.</a>
     <li><a href="/StudentSamples/Year1/A15/HM01.html"> </a>
     </ol>
     <h3>Assignment #16: Image Filters</h3>
@@ -209,7 +209,7 @@
     <h2>Year 2</h2>
     <h3>Assignment #1: Bouncing Ball</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A01/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A01/01.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A01/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A01/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A01/04.html"> </a>
@@ -220,7 +220,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A02/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A02/02.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year2/A02/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/03.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year2/A02/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/HM01.html"> </a>
@@ -229,7 +229,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A03/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A03/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A03/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/03.html">David D.</a>
     <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/HM01.html"> </a>
@@ -239,14 +239,14 @@
     <li><a href="/StudentSamples/Year2/A04/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year2/A04/02.html">Austin F.</a>
     <li><a href="/StudentSamples/Year2/A04/03.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A04/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A04/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/04.html">David D.</a>
+    <li><a href="/StudentSamples/Year2/A04/05.html">Sam S.</a>
     <li><a href="/StudentSamples/Year2/A04/HM01.html"> </a>
     </ol>
     <h3>Assignment #5: Speed Simon</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A05/01.html"> </a>
-    <li><a href="/StudentSamples/Year2/A05/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/01.html">Sam S.</a>
+    <li><a href="/StudentSamples/Year2/A05/02.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A05/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/05.html"> </a>
@@ -255,7 +255,7 @@
     <h3>Assignment #6: Generated Forest</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A06/01.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Year2/A06/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A06/02.html">Logan I.</a>
     <li><a href="/StudentSamples/Year2/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/05.html"> </a>
@@ -263,7 +263,7 @@
     </ol>
     <h3>Assignment #7: Emoji</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A07/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/01.html">Sam S.</a>
     <li><a href="/StudentSamples/Year2/A07/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/04.html"> </a>
@@ -275,23 +275,23 @@
     <li><a href="/StudentSamples/Year2/A08/01.html">Nathan O.</a>
     <li><a href="/StudentSamples/Year2/A08/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year2/A08/03.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A08/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/04.html">Logan I.</a>
+    <li><a href="/StudentSamples/Year2/A08/05.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A08/HM01.html"> </a>
     </ol>
     <h3>Assignment #9: Rocket</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A09/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year2/A09/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A09/03.html"> </a>
-    <li><a href="/StudentSamples/Year2/A09/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A09/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/03.html">Johnny L.</a>
+    <li><a href="/StudentSamples/Year2/A09/04.html">Sam S.</a>
+    <li><a href="/StudentSamples/Year2/A09/05.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A09/HM01.html"> </a>
     </ol>
     <h3>Assignment #10: Create a City</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A10/01.html">Blaise W.</a>
-    <li><a href="/StudentSamples/Year2/A10/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/02.html">Sam S.</a>
     <li><a href="/StudentSamples/Year2/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/05.html"> </a>
@@ -299,20 +299,20 @@
     </ol>
     <h3>Assignment #11: Particles</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A11/01.html"> </a>
-    <li><a href="/StudentSamples/Year2/A11/02.html"> </a>
-    <li><a href="/StudentSamples/Year2/A11/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/01.html">Logan I.</a>
+    <li><a href="/StudentSamples/Year2/A11/02.html">David D.</a>
+    <li><a href="/StudentSamples/Year2/A11/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A11/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A11/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A11/HM01.html"> </a>
     </ol>
     <h3>Assignment #12: Evolution Game</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A12/01.html"> </a>
-    <li><a href="/StudentSamples/Year2/A12/02.html"> </a>
-    <li><a href="/StudentSamples/Year2/A12/03.html"> </a>
-    <li><a href="/StudentSamples/Year2/A12/04.html"> </a>
-    <li><a href="/StudentSamples/Year2/A12/05.html"> </a>
+    <li><a href="/StudentSamples/Year2/A12/01.html">Logan I.</a>
+    <li><a href="/StudentSamples/Year2/A12/02.html">Natalia B.</a>
+    <li><a href="/StudentSamples/Year2/A12/03.html">David D.</a>
+    <li><a href="/StudentSamples/Year2/A12/04.html">Sam S.</a>
+    <li><a href="/StudentSamples/Year2/A12/05.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A12/HM01.html"> </a>
     </ol>
     <h3>Assignment #13: Classes</h3>
@@ -320,14 +320,14 @@
     <li><a href="/StudentSamples/Year2/A13/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A13/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year2/A13/03.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/04.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/HM01.html"> </a>
     </ol>
     <h3>Assignment #14: Splitting Bubbles</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A14/01.html">Blaise W.</a>
-    <li><a href="/StudentSamples/Year2/A14/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/02.html">Logan I.</a>
     <li><a href="/StudentSamples/Year2/A14/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/05.html"> </a>
@@ -337,14 +337,14 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A15/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A15/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year2/A15/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/03.html">David D.</a>
     <li><a href="/StudentSamples/Year2/A15/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/HM01.html"> </a>
     </ol>
     <h3>Assignment #16: Tower Defense</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A16/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/01.html">Logan I.</a>
     <li><a href="/StudentSamples/Year2/A16/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/04.html"> </a>
@@ -355,7 +355,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A17/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year2/A17/02.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year2/A17/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/03.html">Logan I.</a>
     <li><a href="/StudentSamples/Year2/A17/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/HM01.html"> </a>
@@ -381,7 +381,7 @@
 
 
     <!-------------------------------------------Year3---------------------------------->
-    <h2>Year 3</h2>
+    <h2>Gmaes - Year 3</h2>
     <ol>
     <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
     <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
@@ -402,8 +402,8 @@
     <ol>
     <li><a href="/StudentSamples/Extra/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Extra/02.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Extra/03.html"> </a>
-    <li><a href="/StudentSamples/Extra/04.html"> </a>
+    <li><a href="/StudentSamples/Extra/03.html">Arkon - Jayden J.</a>
+    <li><a href="/StudentSamples/Extra/04.html">Flappy Bird - Noah L.</a>
     <li><a href="/StudentSamples/Extra/05.html"> </a>
     <li><a href="/StudentSamples/Extra/06.html"> </a>
     </ol>
