--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
 
     <!-------------------------------------------Year3---------------------------------->
-    <h2>Gmaes - Year 3</h2>
+    <h2>Games - Year 3</h2>
     <ol>
     <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
     <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
