--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
     <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J.</a>
     <li><a href="/StudentSamples/Year3/Aodhan/index.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year3/Noah/index.html">Noah H.</a>
-    <li><a href="https://openprocessing.org/sketch/2105156">Asher B.</a>
-    <li><a href="https://openprocessing.org/sketch/2484304">Blaise W.</a> 
+    <li><a href="https://openprocessing.org/sketch/2105156" target="_blank" rel="noopener noreferrer">Asher B.</a>
+    <li><a href="https://openprocessing.org/sketch/2484304" target="_blank" rel="noopener noreferrer">Blaise W.</a> 
     </ol>
 
     <!-------------------------------------------Year3---------------------------------->
