Tank Winner Declared

--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
     <!-------------------------------------------Year3---------------------------------->
     <h2>Tank Tournament</h2>
     <h4>Winner of the First Semi-annual Tank Tournament: Noah H.</h4>
-    <h4>Winner of the Second Semi-annual Tank Tournament: ???????</h4>
+    <h4>Winner of the Second Semi-annual Tank Tournament: Bryce L.</h4>
+    <h4>Winner of the Third Semi-annual Tank Tournament: ???????</h4>
 
     <!-------------------------------------------EXTRA---------------------------------->
 
