Updated Fall Projects 2024

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year1/A01/05.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A01/HM01.html">Asher B.</a>
+    <li><a href="/StudentSamples/Year1/A01/HM02.html">Emma M.</a>
     </ol>
     <h3>Assignment #2: Width and Height</h3>
     <ol>
@@ -99,7 +100,7 @@
     <li><a href="/StudentSamples/Year1/A10/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A10/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A10/03.html">Ezra R.</a>
-    <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/04.html">Brian H.</a>
     <li><a href="/StudentSamples/Year1/A10/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/HM01.html"> </a>
     </ol>
@@ -118,7 +119,7 @@
     <li><a href="/StudentSamples/Year1/A12/02.html">Jaxen L.</a>
     <li><a href="/StudentSamples/Year1/A12/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A12/04.html">Dora J.</a>
-    <li><a href="/StudentSamples/Year1/A12/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/05.html">Brian H.</a>
     <li><a href="/StudentSamples/Year1/A12/HM01.html"> </a>
     </ol>
     <h3>Assignment #13: Madlib Generator</h3>
@@ -146,7 +147,7 @@
     <li><a href="/StudentSamples/Year1/A15/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A15/04.html">Cyrus F.</a>
     <li><a href="/StudentSamples/Year1/A15/05.html">Logan I.</a>
-    <li><a href="/StudentSamples/Year1/A15/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/HM01.html">Galadriel G.</a>
     </ol>
     <h3>Assignment #16: Image Filters</h3>
     <ol>
@@ -230,7 +231,7 @@
     <li><a href="/StudentSamples/Year2/A03/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A03/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A03/03.html">David D.</a>
-    <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/04.html">Nicolas C. </a>
     <li><a href="/StudentSamples/Year2/A03/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/HM01.html"> </a>
     </ol>
@@ -247,7 +248,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A05/01.html">Sam S.</a>
     <li><a href="/StudentSamples/Year2/A05/02.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year2/A05/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A05/03.html">Ezra R.</a>
     <li><a href="/StudentSamples/Year2/A05/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A05/HM01.html"> </a>
@@ -264,7 +265,7 @@
     <h3>Assignment #7: Emoji</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A07/01.html">Sam S.</a>
-    <li><a href="/StudentSamples/Year2/A07/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A07/02.html">Jaxon L.</a>
     <li><a href="/StudentSamples/Year2/A07/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A07/05.html"> </a>
@@ -302,7 +303,7 @@
     <li><a href="/StudentSamples/Year2/A11/01.html">Logan I.</a>
     <li><a href="/StudentSamples/Year2/A11/02.html">David D.</a>
     <li><a href="/StudentSamples/Year2/A11/03.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year2/A11/04.html"> </a>
+    <li><a href="/StudentSamples/Year2/A11/04.html">Nicolas C. </a>
     <li><a href="/StudentSamples/Year2/A11/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A11/HM01.html"> </a>
     </ol>
@@ -328,7 +329,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A14/01.html">Blaise W.</a>
     <li><a href="/StudentSamples/Year2/A14/02.html">Logan I.</a>
-    <li><a href="/StudentSamples/Year2/A14/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/03.html">Noah L. </a>
     <li><a href="/StudentSamples/Year2/A14/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/HM01.html"> </a>
@@ -345,7 +346,7 @@
     <h3>Assignment #16: Tower Defense</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A16/01.html">Logan I.</a>
-    <li><a href="/StudentSamples/Year2/A16/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A16/02.html">Noah L.</a>
     <li><a href="/StudentSamples/Year2/A16/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/05.html"> </a>
