--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     <li><a href="/StudentSamples/Extra/02.html">Jayden J.</a>
     <li><a href="/StudentSamples/Extra/03.html">Arkon - Jayden J.</a>
     <li><a href="/StudentSamples/Extra/04.html">Flappy Bird - Noah L.</a>
-    <li><a href="/StudentSamples/Extra/05.html"> </a>
+    <li><a href="/StudentSamples/Extra/05.html">Spider - Noah L. </a>
     <li><a href="/StudentSamples/Extra/06.html"> </a>
     </ol>
 
