Updated Student Samples

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <li><a href="/StudentSamples/Year1/A15/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A15/04.html">Cyrus F.</a>
     <li><a href="/StudentSamples/Year1/A15/05.html">Logan I.</a>
-    <li><a href="/StudentSamples/Year1/A15/HM01.html">Galadriel G.</a>
+    <li><a href="/StudentSamples/Year1/A15/HM01.html">Galadhriel G.</a>
     </ol>
     <h3>Assignment #16: Image Filters</h3>
     <ol>
@@ -162,7 +162,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A17/01.html">Aaron P.</a>
     <li><a href="/StudentSamples/Year1/A17/02.html">Gerhardt G.</a>
-    <li><a href="/StudentSamples/Year1/A17/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/03.html">Galadhriel G.</a>
     <li><a href="/StudentSamples/Year1/A17/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/HM01.html"> </a>
@@ -189,7 +189,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A20/01.html">Aaron P.</a>
     <li><a href="/StudentSamples/Year1/A20/02.html">Gerhardt. G.</a>
-    <li><a href="/StudentSamples/Year1/A20/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/03.html">Galadhriel G. </a>
     <li><a href="/StudentSamples/Year1/A20/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/HM01.html"> </a>
@@ -242,7 +242,7 @@
     <li><a href="/StudentSamples/Year2/A04/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A04/04.html">David D.</a>
     <li><a href="/StudentSamples/Year2/A04/05.html">Sam S.</a>
-    <li><a href="/StudentSamples/Year2/A04/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/HM01.html">Jaxon L.</a>
     </ol>
     <h3>Assignment #5: Speed Simon</h3>
     <ol>
@@ -287,7 +287,7 @@
     <li><a href="/StudentSamples/Year2/A09/03.html">Johnny L.</a>
     <li><a href="/StudentSamples/Year2/A09/04.html">Sam S.</a>
     <li><a href="/StudentSamples/Year2/A09/05.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year2/A09/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/HM01.html">Jaxon L.</a>
     </ol>
     <h3>Assignment #10: Create a City</h3>
     <ol>
